# raf_utils

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
projects/raf_array/: Cargo.toml
projects/raf_array/src/: array.rs  hash_helpers.rs  impls.rs  lib.rs
projects/raf_array/src/array/: impls.rs  mod.rs  models.rs
projects/raf_array/src/atomic_array/: array_id.rs  errors.rs  final_strong_array.rs  final_weak_array.rs  internal_array.rs  internal_array_impls.rs  layout_holder.rs  macros.rs  mod.rs  strong_array.rs  strong_array_builder.rs  strong_array_default.rs  strong_array_impls.rs  weak_array.rs
projects/raf_array/src/immutable_string/: cache.rs  errors.rs  hash_helpers.rs  mod.rs  model.rs  string_id.rs  temporary_string.rs  to_byte_slice.rs  to_temporary_string_params.rs  weak_string.rs
projects/raf_array/tests/: test_array.rs  test_atomic_array.rs  test_immutable_string.rs
projects/raf_fnv1a_hasher/: Cargo.toml
projects/raf_fnv1a_hasher/src/: calculations.rs  fnv1a_32_hasher.rs  init.rs  lib.rs
projects/raf_immutable_string/: .gitignore  Cargo.toml
projects/raf_immutable_string/src/: buffer.rs  cache.rs  construction_error.rs  immutable_string.rs  impl_serde.rs  layout_helpers.rs  lib.rs  macros.rs  string_buffer.rs  types.rs  weak_immutable_string.rs
projects/raf_multi_valued_logic/: Cargo.toml
projects/raf_multi_valued_logic/src/: lib.rs
projects/raf_multi_valued_logic/src/tribool/: impl_serde.rs  mod.rs  models.rs
projects/raf_multi_valued_logic/tests/: test_tribool.rs
projects/raf_newick/: Cargo.toml
projects/raf_newick/_raf_newick_impl/: Cargo.toml
projects/raf_newick/_raf_newick_impl/src/models/: connected_checker.rs  mod.rs  newick_arrow.rs  newick_graph.rs  newick_node.rs
projects/raf_newick/_raf_newick_impl/src/parser/: mod.rs
projects/raf_newick/_raf_newick_macros/: Cargo.toml
projects/raf_newick/raf_newick_impl/: Cargo.toml
projects/raf_newick/raf_newick_impl/src/: common.rs  lib.rs  macro_helpers.rs  newick_graph_builder.rs  validation.rs
projects/raf_newick/raf_newick_impl/src/ast/: builder.rs  mod.rs  newick_graph.rs  newick_name.rs  newick_node.rs  newick_reticulation.rs  validation.rs
projects/raf_newick/raf_newick_impl/src/deserializer/: error.rs  mod.rs  models.rs  ok.rs
projects/raf_newick/raf_newick_impl/src/models/: acyclic_checker.rs  mod.rs  newick_arrow.rs  newick_graph.rs  newick_name.rs  newick_reticulation.rs  newick_reticulation_type.rs  newick_weight.rs
projects/raf_newick/raf_newick_impl/src/parser/: error.rs  internal.rs  mod.rs  ok.rs  parse.rs  two_way_map.rs
projects/raf_newick/raf_newick_impl/src/serializer/: error.rs  internal.rs  mod.rs  models.rs  ok.rs  serialize.rs
projects/raf_newick/raf_newick_macros/: Cargo.toml
projects/raf_newick/raf_newick_macros/src/: converter.rs  lib.rs
projects/raf_newick/raf_newick_tests/: Cargo.toml
projects/raf_newick/raf_newick_tests/src/: lib.rs
projects/raf_newick/raf_newick_tests_helpers/: Cargo.toml
projects/raf_newick/raf_newick_tests_helpers/src/: lib.rs
projects/raf_newick/src/: lib.rs
projects/raf_newick/tests/: test_deserialize.rs  test_graph.rs  test_graphs.rs  test_macros.rs  test_serializer.rs
projects/raf_readonly/: Cargo.toml
projects/raf_readonly/src/: code_generator.rs  config.rs  lib.rs  validator.rs
projects/raf_readonly/tests/: test_readonly.rs
projects/raf_shadow_alloc/: Cargo.toml
projects/raf_shadow_alloc/src/: lib.rs  shadow_stack.rs  shadow_stack_size.rs
projects/raf_shadow_alloc/tests/: test_shadow_alloc.rs
projects/raf_stable_enum/: Cargo.toml
projects/raf_stable_enum/src/: input_reader.rs  lib.rs  output_writer.rs
projects/raf_stable_enum/tests/: test_stable_enum.rs  test_stable_enum_drop.rs
projects/raf_structural_logging/: Cargo.toml
projects/raf_structural_logging/src/: lib.rs  macros.rs  models.rs  traits.rs
projects/raf_structural_logging/src/core/: background_worker.rs  core_logger.rs  core_logger_factory.rs  core_logger_factory_builder.rs  mod.rs
projects/raf_structural_logging/src/template/: mod.rs  models.rs  parser.rs
projects/raf_structural_logging/tests/: test_core.rs
projects/raf_structural_logging_console/: Cargo.toml
projects/raf_structural_logging_console/src/: console_write.rs  handler.rs  lib.rs
projects/raf_structural_logging_console/tests/: test_console_write.rs
projects/raf_tagged_pointer/: Cargo.toml
projects/raf_tagged_pointer/src/: bit.rs  lib.rs  macros.rs  tagged_pointer.rs  traits.rs
projects/raf_tagged_pointer/tests/: test_bit.rs  test_tagged_pointer.rs
