[workspace]
members = [
    "projects/raf_array",
    "projects/raf_tagged_pointer",
    "projects/raf_fnv1a_hasher",
    "projects/raf_immutable_string",
    "projects/raf_multi_valued_logic",
    "projects/raf_structural_logging",
    "projects/raf_structural_logging_console",
    "projects/raf_newick",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.78"

[workspace.dependencies]
ctor = "0.2"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
chrono = "0.4"
rand = "0.8"
rstest = "0.21"
smallvec = "1.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
