[package]
name = "raf_array"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
const_format = { workspace = true }
raf_fnv1a_hasher = { path = "../raf_fnv1a_hasher", version = "0.1.1" }

[dev-dependencies]
rstest = { workspace = true }
