[package]
name = "raf_immutable_string"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ctor = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
raf_fnv1a_hasher = { path = "../raf_fnv1a_hasher", version = "0.1" }

[dev-dependencies]
rstest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["ctor", "serde"]
ctor = ["dep:ctor"]
serde = ["dep:serde"]
