[package]
name = "raf_multi_valued_logic"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]