[package]
name = "raf_newick"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
_raf_newick_macros = { path = "_raf_newick_macros" }
_raf_newick_impl = { path = "_raf_newick_impl" }

[dev-dependencies]
rstest = { workspace = true }

[features]
