[package]
name = "raf_structural_logging_console"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
termcolor = { workspace = true }
chrono = { workspace = true }
raf_structural_logging = { path = "../raf_structural_logging", version = "0.1" }
raf_immutable_string = { path = "../raf_immutable_string", version = "0.1" }

[dev-dependencies]

[features]
