[package]
name = "raf_newick_impl"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
smallvec = { workspace = true }
raf_array = { path = "../../raf_array", version = "0.1.1"  }
raf_fnv1a_hasher = { path = "../../raf_fnv1a_hasher", version = "0.1.1" }
