[package]
name = "raf_newick_macros"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
raf_newick_impl = { path = "../raf_newick_impl" }
